--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "aws-fpga"]
 	path = aws-fpga
 	url = git@github.com:aws/aws-fpga.git
+[submodule "drlp"]
+	path = drlp
+	url = https://github.com/hwpeng/drlp.git
